Revert "move redhat-developer/rhdh-chart back to original location so"
This reverts commit 4d6b17e7a322abcc4ea96fdf7b500a1e6e7e5d9f.

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -43,8 +43,8 @@ jobs:
         id: generate_token
         uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
         with:
-          app_id: ${{ vars.JANUS_IDP_GITHUB_APP_ID }}
-          private_key: ${{ secrets.JANUS_IDP_GITHUB_APP_PRIVATE_KEY }}
+          app_id: ${{ vars.RHDH_GITHUB_APP_ID }}
+          private_key: ${{ secrets.RHDH_GITHUB_APP_PRIVATE_KEY }}
 
       - name: Checkout Repository
         if: steps.command.outputs.command-name
