chore: RHIDP-3048: Add release name to dynamic-plugins configmap name (#35)
The dynamic-plugins configmap currently has a hard-coded name of
'dynamic-plugins' which prevents having two Developer Hub installations
in the same namespace.

This pull request updates the name of the 'dynamic-plugins' configmap
to include the name of the release such as '<release>-dynamic-plugins'
which will alleviate this issue and allow multiple installations of
Developer Hub per namespace using Helm.

--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -134,7 +134,7 @@ upstream:
       - name: dynamic-plugins
         configMap:
           defaultMode: 420
-          name: dynamic-plugins
+          name: '{{ printf "%s-dynamic-plugins" .Release.Name }}'
           optional: true
       # Optional volume that allows exposing the `.npmrc` file (through a `dynamic-plugins-npmrc` secret)
       # to be used when running `npm pack` during the dynamic plugins installation by the initContainer.
