--- a/charts/backstage/templates/dynamic-plugins-configmap.yaml
+++ b/charts/backstage/templates/dynamic-plugins-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dynamic-plugins
+  name: {{ printf "%s-dynamic-plugins" .Release.Name }}
 data:
   dynamic-plugins.yaml: |
     {{- include "common.tplvalues.render" ( dict "value"
