--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -36,7 +36,7 @@ upstream:
   backstage:
     image:
       registry: quay.io
-      repository: janus-idp/backstage-showcase
+      repository: rhdh/rhdh-hub-rhel9
       tag: latest
     command: []
     # FIXME (tumido): USE POSTGRES_PASSWORD and POSTGRES_USER instead of POSTGRES_ADMIN_PASSWORD
@@ -59,8 +59,11 @@ upstream:
             password: ${POSTGRESQL_ADMIN_PASSWORD}
             user: postgres
         auth:
-          keys:
-            - secret: ${BACKEND_SECRET}
+          externalAccess:
+            - type: legacy
+              options:
+                subject: legacy-default-config
+                secret: ${BACKEND_SECRET}
     containerSecurityContext:
       allowPrivilegeEscalation: false
       capabilities:
