--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -142,6 +142,13 @@ upstream:
           defaultMode: 420
           optional: true
           secretName: '{{ printf "%s-dynamic-plugins-npmrc" .Release.Name }}'
+      # Optional volume that allows adding a container registry `auth.json` file (through a `dynamic-plugins-registry-auth` secret)
+      # to be used when installing plugins from secure container registries during the dynamic plugins installation by the initContainer.
+      - name: dynamic-plugins-registry-auth
+        secret:
+          defaultMode: 416
+          optional: true
+          secretName: '{{ printf "%s-dynamic-plugins-registry-auth" .Release.Name }}'
       - name: npmcacache
         emptyDir: {}
     initContainers:
@@ -183,6 +190,9 @@ upstream:
             name: dynamic-plugins-npmrc
             readOnly: true
             subPath: .npmrc
+          - mountPath: /opt/app-root/src/.config/containers
+            name: dynamic-plugins-registry-auth
+            readOnly: true
           - mountPath: /opt/app-root/src/.npm/_cacache
             name: npmcacache
         workingDir: /opt/app-root/src
