--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -47,6 +47,9 @@ upstream:
     # create multiple DBs. Since Backstage requires by default 5 different DBs, we
     # can't accommodate that properly.
     appConfig:
+      auditLog:
+        rotateFile:
+          enabled: true
       app:
         # Please update to match host in case you don't want to configure hostname via `global.clusterRouterBase` or `global.host` if not deploying on an openshift cluster.
         baseUrl: 'https://{{- include "janus-idp.hostname" . }}'
@@ -120,7 +123,7 @@ upstream:
         mountPath: /opt/app-root/src/dynamic-plugins-root
       # Audit Log data will be stored in this volume mount.
       - name: audit-log-data
-        mountPath: /var/log/audit
+        mountPath: /var/log/redhat-developer-hub/audit
     extraVolumes:
       - name: dynamic-plugins-root
         persistentVolumeClaim:
