chore: update backstage chart to 2.1.0 (#46)
Signed-off-by: Jessica He <jhe@redhat.com>

--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -50,6 +50,8 @@ upstream:
       auditLog:
         rotateFile:
           enabled: true
+      auth:
+        providers: {}
       app:
         # Please update to match host in case you don't want to configure hostname via `global.clusterRouterBase` or `global.host` if not deploying on an openshift cluster.
         baseUrl: 'https://{{- include "janus-idp.hostname" . }}'
