feat: add support for exposing OpenTelemetry metrics (#48)
* add support for exposing OpenTelemetry metrics

Signed-off-by: Jessica He <jhe@redhat.com>

* Bump helm chart version

---------

Signed-off-by: Jessica He <jhe@redhat.com>
Co-authored-by: Corey Daley <cdaley@redhat.com>

--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -197,6 +197,13 @@ upstream:
       checksum/dynamic-plugins: >-
         {{- include "common.tplvalues.render" ( dict "value"
         .Values.global.dynamic "context" $) | sha256sum }}
+  ingress:
+    host: "{{ .Values.global.host }}"
+  metrics:
+    serviceMonitor:
+      enabled: false
+      path: /metrics
+      port: http-metrics
   postgresql:
     enabled: true
     postgresqlDataDir: /var/lib/pgsql/data/userdata
@@ -232,8 +239,11 @@ upstream:
             secretKeyRef:
               key: postgres-password
               name: '{{- include "postgresql.v1.secretName" . }}'
-  ingress:
-    host: "{{ .Values.global.host }}"
+  service:
+    extraPorts:
+      - name: http-metrics
+        port: 9464
+        targetPort: 9464
 
 # -- OpenShift Route parameters
 route:
