--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -190,6 +190,7 @@ upstream:
             memory: 2.5Gi
             ephemeral-storage: 5Gi
         securityContext:
+          readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
           capabilities:
             drop: ["ALL"]
