fix: Revert setting storage class fields to `null` by default [RHIDP-5953] (#97)
* Revert setting storageClass fields to null by default

When the PVC is initially created, it gets assigned the default storage class

And it becomes impossible to upgrade the Helm Release later on because it looks like the (immutable) PVC is being patched after creation

* Bump Chart version

* Catch regression by testing an in-place upgrade of each chart from its previous version

When using the '–upgrade' flag, regression testing will only be performed if the major version of the Chart is not changed (Semver).

Otherwise, normal testing will still happen.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Run chart-testing (latest)
         # test with latest stable backstage-showcase release
-        run: ct install --config ct-install.yaml --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-set-args="--set=upstream.backstage.image.tag=latest --set=global.clusterRouterBase=app.example.com"
+        run: ct install --config ct-install.yaml --upgrade --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-set-args="--set=upstream.backstage.image.tag=latest --set=global.clusterRouterBase=app.example.com"
   test-next:
     name: Test Next Release
     runs-on: ubuntu-latest
@@ -136,4 +136,4 @@ jobs:
 
       - name: Run chart-testing (next)
         # test with the next backstage-showcase version (main branch)
-        run: ct install --config ct-install.yaml --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-set-args="--set=upstream.backstage.image.tag=next --set=global.clusterRouterBase=app.example.com"
+        run: ct install --config ct-install.yaml --upgrade --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-set-args="--set=upstream.backstage.image.tag=next --set=global.clusterRouterBase=app.example.com"
