ci: Refactor the test GH Job using a matrix strategy (#111)
* Align both ct-install.yaml and ct.yaml settings

* Refactor the test GH Job using a matrix strategy

There were some duplicate steps, and the only difference was just the image tag

* Bump the Chart version to test the changes in the GH test workflow

* Revert "Bump the Chart version to test the changes in the GH test workflow"

This reverts commit 48525f3833d58a1c7b4d8e8c62945311d539bc97.

* fixup! Refactor the test GH Job using a matrix strategy

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,21 @@ name: Test Charts
 
 on:
   pull_request:
+    branches:
+      - main
+      - rhdh-1.[0-9]+
+      - 1.[0-9]+.x
+      - release-1.[0-9]+
     paths:
       - "charts/**"
       - ".github/**"
+      - ".pre-commit/**"
+      - "ct-install.yaml"
+      - "ct.yaml"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number }}
+  cancel-in-progress: true
 
 jobs:
   check-metadata:
@@ -31,9 +43,24 @@ jobs:
         uses: pre-commit/action@2c7b3805fd2a0fd8c1884dcaebf91fc102a13ecd # v3.0.1
         with:
           extra_args: --show-diff-on-failure
-  test-latest:
-    name: Test Latest Release
+
+  test-chart:
+    strategy:
+      matrix:
+        version:
+          # 'latest' is the latest RC or stable release of RHDH (built from a release branch)
+          - latest
+        experimental: [false]
+        include:
+          # 'next' is the upcoming release of RHDH
+          # (built from the RHDH main branch, so might be unstable)
+          - version: next
+            experimental: true
+
+    name: Test ${{ matrix.version }} release
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -59,8 +86,12 @@ jobs:
           helm repo add backstage https://backstage.github.io/charts
           helm repo update
 
-      - name: Run chart-testing (lint)
-        run: ct lint --config ct.yaml --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-args="--set upstream.backstage.image.tag=latest --set global.clusterRouterBase=app.example.yaml"
+      - name: Lint chart
+        run: |
+          ct lint \
+            --config ct.yaml \
+            --target-branch "${{ github.event.pull_request.base.ref }}" \
+            --helm-extra-args="--set upstream.backstage.image.tag=${{ matrix.version }} --set global.clusterRouterBase=app.example.com"
 
       - name: Create KIND Cluster
         uses: helm/kind-action@a1b0e391336a6ee6713a0583f8c6240d70863de3 # v1.12.0
@@ -79,61 +110,15 @@ jobs:
           EOF
 
       - name: Install Ingress Controller
-        run: "helm install ingress-nginx/ingress-nginx --generate-name --set controller.service.type='NodePort' --set controller.admissionWebhooks.enabled=false"
-
-      - name: Run chart-testing (latest)
-        # test with latest stable backstage-showcase release
-        run: ct install --config ct-install.yaml --upgrade --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-set-args="--set=upstream.backstage.image.tag=latest --set=global.clusterRouterBase=app.example.com"
-  test-next:
-    name: Test Next Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up Helm
-        uses: azure/setup-helm@5119fcb9089d432beecbf79bb2c7915207344b78 # renovate: tag=v3.5
-        with:
-          version: v3.10.0
-
-      - uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5
-        with:
-          python-version: 3.13
-
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@0d28d3144d3a25ea2cc349d6e59901c4ff469b3b # v2.7.0
-
-      - name: "Add NGINX Ingress and Bitnami Repository"
         run: |
-          helm repo add ingress-nginx "https://kubernetes.github.io/ingress-nginx"
-          helm repo add bitnami "https://charts.bitnami.com/bitnami"
-          helm repo add backstage https://backstage.github.io/charts
-          helm repo update
+          helm install ingress-nginx/ingress-nginx --generate-name \
+            --set controller.service.type='NodePort' \
+            --set controller.admissionWebhooks.enabled=false
 
-      - name: Run chart-testing (lint)
-        run: ct lint --config ct.yaml --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-args="--set upstream.backstage.image.tag=next --set global.clusterRouterBase=app.example.yaml"
-
-      - name: Create KIND Cluster
-        uses: helm/kind-action@a1b0e391336a6ee6713a0583f8c6240d70863de3 # v1.12.0
-
-      - name: Create custom storage class
+      - name: Run chart-testing
         run: |
-          cat <<EOF | kubectl apply -f -
-          apiVersion: storage.k8s.io/v1
-          kind: StorageClass
-          metadata:
-            name: custom-sc
-          # same provisioner as the one used by the default storage class on KinD
-          provisioner: rancher.io/local-path
-          reclaimPolicy: Delete
-          volumeBindingMode: WaitForFirstConsumer
-          EOF
-
-      - name: Install Ingress Controller
-        run: "helm install ingress-nginx/ingress-nginx --generate-name --set controller.service.type='NodePort' --set controller.admissionWebhooks.enabled=false"
-
-      - name: Run chart-testing (next)
-        # test with the next backstage-showcase version (main branch)
-        run: ct install --config ct-install.yaml --upgrade --target-branch ${{ github.event.pull_request.base.ref }} --helm-extra-set-args="--set=upstream.backstage.image.tag=next --set=global.clusterRouterBase=app.example.com"
+          ct install \
+            --config ct-install.yaml \
+            --upgrade \
+            --target-branch "${{ github.event.pull_request.base.ref }}" \
+            --helm-extra-set-args="--set upstream.backstage.image.tag=${{ matrix.version }} --set global.clusterRouterBase=app.example.com"
