ci: Install OLM in the test K8s cluster (#112)
This is in preparation for testing the orchestrator-infra chart that will install some Operators

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,6 +115,15 @@ jobs:
             --set controller.service.type='NodePort' \
             --set controller.admissionWebhooks.enabled=false
 
+      - name: Install Operator Lifecycle Manager (OLM)
+        # In case we need to install additional Operators
+        env:
+          OLM_VERSION: "v0.31.0"
+        run: |
+          curl -L "https://github.com/operator-framework/operator-lifecycle-manager/releases/download/${OLM_VERSION}/install.sh" -o install-olm.sh
+          chmod +x install-olm.sh
+          ./install-olm.sh "${OLM_VERSION}"
+
       - name: Run chart-testing
         run: |
           ct install \
