--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,8 @@ jobs:
           - version: next
             experimental: true
 
-    name: Test ${{ matrix.version }} release
+    # Aligning job name with the OpenShift CI config: https://github.com/openshift/release/blob/master/core-services/prow/02_config/redhat-developer/rhdh-chart/_prowconfig.yaml#L18
+    name: Test ${{ matrix.version == 'latest' && 'Latest' || matrix.version }} Release
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental }}
 
@@ -89,25 +90,53 @@ jobs:
       - name: Lint chart
         run: |
           ct lint \
+            --debug \
             --config ct.yaml \
             --target-branch "${{ github.event.pull_request.base.ref }}" \
-            --helm-extra-args="--set upstream.backstage.image.tag=${{ matrix.version }} --set global.clusterRouterBase=app.example.com"
+            --helm-extra-args="--set upstream.backstage.image.tag=${{ matrix.version }} --set upstream.ingress.enabled=true"
+
+      - name: Generate KinD Config
+        run: |
+          cat <<EOF > /tmp/kind-config.yaml
+          apiVersion: kind.x-k8s.io/v1alpha4
+          kind: Cluster
+          nodes:
+            - role: control-plane
+              extraPortMappings:
+                - containerPort: 80
+                  hostPort: 80
+                  protocol: TCP
+                - containerPort: 443
+                  hostPort: 443
+                  protocol: TCP
+          EOF
 
       - name: Create KIND Cluster
         uses: helm/kind-action@a1b0e391336a6ee6713a0583f8c6240d70863de3 # v1.12.0
+        with:
+          config: /tmp/kind-config.yaml
 
       - name: Create custom storage class
         run: |
+          export defaultScProvisioner=$(kubectl get storageclass -o jsonpath='{.items[?(@.metadata.annotations.storageclass\.kubernetes\.io/is-default-class=="true")].provisioner}')
+          if [[ -z "$defaultScProvisioner" ]]; then
+            echo "No default storage class found or it has no provisioner. Exiting early because the test using the custom Storage Class will likely fail. Use a cluster that has a default storage class."
+            exit 1
+          fi
+          echo "[INFO] defaultScProvisioner=$defaultScProvisioner"
+
           cat <<EOF | kubectl apply -f -
           apiVersion: storage.k8s.io/v1
           kind: StorageClass
           metadata:
             name: custom-sc
-          # same provisioner as the one used by the default storage class on KinD
-          provisioner: rancher.io/local-path
+          # same provisioner as the one used by the default storage class on the cluster
+          provisioner: $defaultScProvisioner
           reclaimPolicy: Delete
           volumeBindingMode: WaitForFirstConsumer
           EOF
+
+          kubectl get storageclass custom-sc -o yaml
 
       - name: Install Ingress Controller
         run: |
@@ -127,7 +156,8 @@ jobs:
       - name: Run chart-testing
         run: |
           ct install \
+            --debug \
             --config ct-install.yaml \
             --upgrade \
             --target-branch "${{ github.event.pull_request.base.ref }}" \
-            --helm-extra-set-args="--set upstream.backstage.image.tag=${{ matrix.version }} --set global.clusterRouterBase=app.example.com"
+            --helm-extra-set-args="--set upstream.backstage.image.tag=${{ matrix.version }} --set upstream.ingress.enabled=true --set global.host=rhdh.127.0.0.1.sslip.io"
