ci: Disable fail-fast strategy for the test matrix (#119)
Otherwise, if one job in the matrix fails, all other jobs that are still running will be cancelled.

It would be helpful to get results from all matrix jobs, regardless of individual failures.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,7 @@ jobs:
 
   test-chart:
     strategy:
+      fail-fast: false
       matrix:
         version:
           # 'latest' is the latest RC or stable release of RHDH (built from a release branch)
