chore: enable readOnlyRootFilesystem by default on backend container (#102)

--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -67,6 +67,7 @@ upstream:
                 subject: legacy-default-config
                 secret: ${BACKEND_SECRET}
     containerSecurityContext:
+      readOnlyRootFilesystem: true
       allowPrivilegeEscalation: false
       capabilities:
         drop: ["ALL"]
