--- a/charts/orchestrator-infra/values.yaml
+++ b/charts/orchestrator-infra/values.yaml
@@ -14,7 +14,7 @@ serverlessLogicOperator:
       # --  name of the catalog source
       source: redhat-operators
       sourceNamespace: openshift-marketplace
-      # -- The initial version of the operator
+      # -- The initial version of the operator, must match CRDs installed by the chart
       startingCSV: logic-operator-rhel8.v1.35.0
 
 serverlessOperator:
