--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,41 +8,17 @@ on:
       - 1.[0-9]+.x
       - release-1.[0-9]+
     paths:
-      - "charts/**"
-      - ".github/**"
-      - ".pre-commit/**"
-      - "ct-install.yaml"
-      - "ct.yaml"
+      - 'charts/**'
+      - '.github/workflows/test.yaml'
+      - 'ct-install.yaml'
+      - 'ct.yaml'
+      - '.helmignore'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number }}
   cancel-in-progress: true
 
 jobs:
-  check-metadata:
-    name: Lint Metadata
-    runs-on: ubuntu-latest
-    env:
-      GO111MODULE: on
-    steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
-      - uses: actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55 # v5
-        with:
-          python-version: 3.13
-
-      - uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5
-        with:
-          go-version: ^1
-
-      - name: Setup helm-docs
-        run: go install github.com/norwoodj/helm-docs/cmd/helm-docs@latest
-
-      - name: Run pre-commit
-        uses: pre-commit/action@2c7b3805fd2a0fd8c1884dcaebf91fc102a13ecd # v3.0.1
-        with:
-          extra_args: --show-diff-on-failure
 
   test-chart:
     strategy:
@@ -87,14 +63,6 @@ jobs:
           helm repo add bitnami "https://charts.bitnami.com/bitnami"
           helm repo add backstage https://backstage.github.io/charts
           helm repo update
-
-      - name: Lint chart
-        run: |
-          ct lint \
-            --debug \
-            --config ct.yaml \
-            --target-branch "${{ github.event.pull_request.base.ref }}" \
-            --helm-extra-args="--set upstream.backstage.image.tag=${{ matrix.version }} --set upstream.ingress.enabled=true"
 
       - name: Generate KinD Config
         run: |
