ci: Skip running some expensive steps (like cluster creation) if there are no changed charts (#126)
* ci: Skip running some expensive steps (like cluster creation) if there are no changed charts

* [TO REMOVE] Test the changes by bumping the orchestrator-chart version

* Revert "[TO REMOVE] Test the changes by bumping the orchestrator-chart version"

This reverts commit 9f91bb7726ab5a3781e37166d2fceaf74f45f408.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -38,7 +38,16 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@0d28d3144d3a25ea2cc349d6e59901c4ff469b3b # v2.7.0
 
-      - name: Lint charts
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --target-branch "${{ github.event.pull_request.base.ref }}")
+          if [[ -n "$changed" ]]; then
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Run chart-testing (lint)
+        if: steps.list-changed.outputs.changed == 'true'
         run: |
           ct lint \
             --debug \
