--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,11 +59,11 @@ jobs:
             echo "changed=true" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: "Add NGINX Ingress and Bitnami Repository"
+      - name: Add Helm Repositories
         if: steps.list-changed.outputs.changed == 'true'
         run: |
-          helm repo add ingress-nginx "https://kubernetes.github.io/ingress-nginx"
-          helm repo add bitnami "https://charts.bitnami.com/bitnami"
+          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+          helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add backstage https://backstage.github.io/charts
           helm repo update
 
