chore(chart): fix Orchestrator Infra Chart metadata to avoid conflicts with RHDH Chart (#131)
* Update metadata of the RHDH Orch Chart

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* chore: bump chart version to 0.0.4

* Remove -Ci suffix

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* Clarify description: both required to configure Red Hat Developer Hub to use the Orchestrator.

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

---------

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

--- a/charts/orchestrator-infra/Chart.yaml
+++ b/charts/orchestrator-infra/Chart.yaml
@@ -1,11 +1,12 @@
 annotations:
-  charts.openshift.io/name: Orchestrator-Infra
+  charts.openshift.io/name: Orchestrator Infrastructure for Red Hat Developer Hub
   charts.openshift.io/provider: Red Hat Developer Hub Team
   charts.openshift.io/supportURL: https://issues.redhat.com/browse/RHIDP
 apiVersion: v2
-name: orchestrator-infra
+name: redhat-developer-hub-orchestrator-infra
 description: >
-  Helm chart to deploy the Orchestrator solution's required infrastructure suite on OpenShift, including OpenShift Serverless Logic Operator and OpenShift Serverless Operator.
+  Helm chart to deploy the Orchestrator solution's required infrastructure suite on OpenShift, including
+  OpenShift Serverless Operator and OpenShift Serverless Logic Operator, both required to configure Red Hat Developer Hub to use the Orchestrator.
 kubeVersion: ">= 1.25.0-0"
 maintainers:
   - name: Red Hat Developer Hub Team
@@ -13,4 +14,4 @@ maintainers:
 type: application
 sources:
   - https://github.com/redhat-developer/rhdh-chart
-version: 0.0.3
+version: 0.0.4
