chore(ci): simplify Snyk workflow using matrix for chart scans (#137)
* chore(ci): simplify Snyk workflow using matrix for chart scans

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* chore(ci): enable workflow_dispatch and PR triggers for Snyk matrix scan testing

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* chore(ci): dynamically name Snyk IaC scan step using chart name

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* fixup: Removed path and output from the matrix, now inferred directly from chart name. AND Kept workflow_dispatch so WE can trigger this manually from GitHub.

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* test

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* chore(ci): remove debug step from Snyk matrix workflow

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

---------

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -1,13 +1,21 @@
 name: SNYK
 
 on:
+  workflow_dispatch:  # allow manual runs from UI
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: "0 0 * * 0"  # weekly scan (every Sunday at 00:00 UTC)
 
 jobs:
   scan-iac:
     name: Scan Rendered Templates
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        chart:
+          - backstage
+          - orchestrator-infra
+
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -19,32 +27,20 @@ jobs:
         with:
           version: v3.17.0
 
-      - name: Render Templates
+      - name: Render Templates for ${{ matrix.chart }}
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add backstage https://backstage.github.io/charts
-          helm repo update    
-          helm dependency build ./charts/backstage
-          helm dependency build ./charts/orchestrator-infra
-          helm template ./charts/backstage --output-dir ./output/backstage
-          helm template ./charts/orchestrator-infra --output-dir ./output/orchestrator-infra
+          helm repo update
+          helm dependency build ./charts/${{ matrix.chart }}
+          helm template ./charts/${{ matrix.chart }} --output-dir ./output/${{ matrix.chart }}
 
-      - name: Run SNYK IaC Scan for Developer Hub
+      - name: Run Snyk IaC Scan for ${{ matrix.chart }}
         continue-on-error: true
         uses: snyk/actions/iac@b98d498629f1c368650224d6d212bf7dfa89e4bf # 0.4.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           SNYK_ORG_ID: ${{ secrets.SNYK_ORG_ID }}
         with:
-          args: --report --org=$SNYK_ORG_ID --target-name="redhat-developer/rhdh-chart/backstage"
-          file: ./output/backstage
-
-      - name: Run Snyk IaC Scan for Orchestrator Infra
-        continue-on-error: true
-        uses: snyk/actions/iac@b98d498629f1c368650224d6d212bf7dfa89e4bf # 0.4.0
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-          SNYK_ORG_ID: ${{ secrets.SNYK_ORG_ID }}
-        with:
-          args: --report --org=$SNYK_ORG_ID --target-name="redhat-developer/rhdh-chart/orchestrator-infra"
-          file: ./output/orchestrator-infra
+          args: --report --org=$SNYK_ORG_ID --target-name="redhat-developer/rhdh-chart/${{ matrix.chart }}"
+          file: ./output/${{ matrix.chart }}
