--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -208,6 +208,9 @@ upstream:
         env:
           - name: NPM_CONFIG_USERCONFIG
             value: /opt/app-root/src/.npmrc.dynamic-plugins
+            # This following variable is required for orchestrator to startup properly.
+          - name: MAX_ENTRY_SIZE
+            value: "30000000"
         imagePullPolicy: Always
         volumeMounts:
           - mountPath: /dynamic-plugins-root
