chore: update default chart settings using downstream patches so we can remove Chart_patch.yaml (RHIDP-7529) (#162)
* chore: update default chart settings using downstream patches so we can remove Chart_patch.yaml (RHIDP-7529)

Signed-off-by: Nick Boldt <nboldt@redhat.com>

* bump version to 4.2.6

Signed-off-by: Nick Boldt <nboldt@redhat.com>

* update Readme.md too

Signed-off-by: Nick Boldt <nboldt@redhat.com>

* Update charts/backstage/Chart.yaml

* oh no trailing space removed

Signed-off-by: Nick Boldt <nboldt@redhat.com>

---------

Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/charts/backstage/Chart.yaml
+++ b/charts/backstage/Chart.yaml
@@ -14,7 +14,10 @@ annotations:
   charts.openshift.io/supportURL: https://access.redhat.com/support
 apiVersion: v2
 description: |
-  A Helm chart for deploying Red Hat Developer Hub.
+  Red Hat Developer Hub is a Red Hat supported version of Backstage.
+  It comes with pre-built plug-ins and configuration settings, supports use of an external database, and can
+  help streamline the process of setting up a self-managed internal
+  developer portal for adopters who are just starting out.
 
   The telemetry data collection feature is enabled by default. Red Hat Developer Hub sends telemetry data to Red Hat by using the `backstage-plugin-analytics-provider-segment` plugin. To disable this and to learn what data is being collected, see https://docs.redhat.com/en/documentation/red_hat_developer_hub/1.5/html-single/telemetry_data_collection/index
 dependencies:
@@ -32,8 +35,6 @@ icon: data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgi
 keywords:
   - backstage
   - idp
-  # remove reference to janus-idp when sunsetted https://issues.redhat.com/browse/RHIDP-3227
-  - janus-idp
   - developer-hub
   - redhat-developer-hub
   - redhat
@@ -47,4 +48,6 @@ sources: []
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 4.2.5
+# Note that when this chart is published to https://github.com/openshift-helm-charts/charts
+# it will follow the RHDH versioning 1.y.z
+version: 4.2.6
