--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -372,7 +372,7 @@ orchestrator:
     externalDBName: ""
 
     # -- Image for the init container used by the create-db job
-    initContainerImage: busybox
+    initContainerImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
 
     # -- Image for the container used by the create-db job
-    createDBJobImage: "postgres:15"
+    createDBJobImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
