chore(fix): Resolve Snyk IaC Findings for RHDH Helm Chart (with and without Orchestrator) (#166)
* Resolve SNYK-CC-K8S-6, SNYK-CC-K8S-9, SNYK-CC-K8S-10

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* Resolve Low issues

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* fix indent

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* fix containerSecurityContext

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* fix imagePullPolicy in test-connection

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* add pull_request to trigger and test PR behavior

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* remove pull_request to trigger and test PR behavior

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* bump chart version

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* Remove readOnlyRootFilesystem: true from PostgreSQL only

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* disable container security context

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* remove runAsUser and runAsGroup

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* Chart version bumped

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* Dont set runAsUser as ocp  usually randomly assigns a high UID to each pod and does not allow hardcoding UIDs by default.

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* Remove all runAsNonRoot: true settings for now to get your tests passing.

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* fixup

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

* imagePullPolicy below image

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>

---------

Signed-off-by: Fortune-Ndlovu <fndlovu@redhat.com>
Co-authored-by: Armel Soro <asoro@redhat.com>

--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -263,6 +263,10 @@ upstream:
         enabled: false
       containerSecurityContext:
         enabled: false
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+            - ALL
       resources:
         requests:
           cpu: 250m
