chore: link to 1.6 docs, which have changed path again (RHIDP-7643) [main] (#178)
* chore: link to 1.6 docs, which have changed path again

Signed-off-by: Nick Boldt <nboldt@redhat.com>

* chore: link to 1.6 docs, which have changed path again (version bump)

Signed-off-by: Nick Boldt <nboldt@redhat.com>

* return to the old, simpler header text for RHDH chart; remove '(Community Version)' from rhdh and orch infra chart readmes; bump orch infra to 0.1.0 because 0.0.z is for the 1.6 branch

Signed-off-by: Nick Boldt <nboldt@redhat.com>

* Update charts/backstage/Chart.yaml

* Update charts/backstage/README.md

---------

Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/charts/backstage/Chart.yaml
+++ b/charts/backstage/Chart.yaml
@@ -14,12 +14,9 @@ annotations:
   charts.openshift.io/supportURL: https://access.redhat.com/support
 apiVersion: v2
 description: |
-  Red Hat Developer Hub is a Red Hat supported version of Backstage.
-  It comes with pre-built plug-ins and configuration settings, supports use of an external database, and can
-  help streamline the process of setting up a self-managed internal
-  developer portal for adopters who are just starting out.
+  A Helm chart for deploying Red Hat Developer Hub, which is a Red Hat supported version of Backstage.
 
-  The telemetry data collection feature is enabled by default. Red Hat Developer Hub sends telemetry data to Red Hat by using the `backstage-plugin-analytics-provider-segment` plugin. To disable this and to learn what data is being collected, see https://docs.redhat.com/en/documentation/red_hat_developer_hub/1.5/html-single/telemetry_data_collection/index
+  The telemetry data collection feature is enabled by default. Red Hat Developer Hub sends telemetry data to Red Hat by using the `backstage-plugin-analytics-provider-segment` plugin. To disable this and to learn what data is being collected, see https://docs.redhat.com/en/documentation/red_hat_developer_hub/1.6/html-single/telemetry_data_collection_and_analysis/index
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
@@ -50,4 +47,4 @@ sources: []
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 # Note that when this chart is published to https://github.com/openshift-helm-charts/charts
 # it will follow the RHDH versioning 1.y.z
-version: 4.2.11
+version: 4.2.12
